# kio-onedrive-old

./: CMakeLists.txt  HACKING  Messages.sh  README.md  README.packagers  onedrive.json
autotests/: CMakeLists.txt  listtest.cpp  urltest.cpp
desktop/: CMakeLists.txt  onedrive-network.desktop  org.kde.kio-onedrive.appdata.xml
doc/: CMakeLists.txt  index.docbook
kaccounts/: CMakeLists.txt  kaccountsplugin.cpp  kaccountsplugin.h  microsoft-onedrive.service.in  onedrive.notifyrc
src/: CMakeLists.txt  abstractaccountmanager.h  debug.cpp  debug.h  kaccountsmanager.cpp  kaccountsmanager.h  keychainaccountmanager.cpp  keychainaccountmanager.h  kio_onedrive.cpp  kio_onedrive.h  onedrivehelper.cpp  onedrivehelper.h  onedriveurl.cpp  onedriveurl.h  pathcache.cpp
